fixed no scroll on mobile

--- a/styles/sass/_mainPage.scss
+++ b/styles/sass/_mainPage.scss
@@ -32,7 +32,7 @@ main {
     background-repeat: repeat;
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
